# ForExScanner

./: README.md  requirements.txt
forexscanner/: pyproject.toml
forexscanner/src/forexscanner/: constants.py  mailer.py  main.py  oandaclient.py
forexscanner/src/forexscanner/indicators/: atr.py  ema.py
scripts/: deploy2pypi.bat  deploy2pypi.sh  install.bat  install.sh  run.bat  run.sh  test.bat  test.sh
