[project]
name = "forexscanner"
version = "1.0.0"
description = "ForEx scanner for detecting trading opportunities"
authors = [
    {name = "Ralph Brecheisen",email = "ralph.brecheisen@gmail.com"}
]
repository = "https://github.com/rbrecheisen/ForExScanner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "forexscanner", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
